--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
