--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
     "vue": "^2.6.11",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.2.0",
     "vue-toasted": "^1.1.28",
     "vuetify": "^2.4.0",
